MBMS-61967 fix spacing on checkbox on pre need review page

--- a/src/applications/pre-need/sass/pre-need.scss
+++ b/src/applications/pre-need/sass/pre-need.scss
@@ -84,6 +84,34 @@ article#pre-need[data-location="sponsor-demographics-notprod"] {
       }
     }
   }
+  .form-checkbox > input[type="checkbox"] + .schemaform-label {
+    line-height: 0.5rem;
+  }
+  .form-checkbox > input[type="checkbox"] + label::before {
+    margin-top: -0.35em;
+  }
+  fieldset.schemaform-field-template.schemaform-first-field {
+    margin-top: -2em;
+    margin-bottom: -0.9em;
+  }
+  .schemaform-widget-wrapper {
+    &:nth-child(2) {
+      fieldset.vads-u-margin-y--2.rjsf-object-field {
+        div {
+          margin-top: 3.4em;
+          &:nth-child(1) {
+            margin-top: -1.5em;
+          }
+        }
+      }
+    }
+  }
+  div > div:nth-child(2) > div:nth-child(1) > div > div.progress-box.progress-box-schemaform > div > form > div.vads-u-margin-y--2.rjsf-object-field > div > fieldset > div:nth-child(3) > div > div:nth-child(2) > fieldset > div.schemaform-widget-wrapper {
+    margin-bottom: -1.5em;
+  }
+  div > div:nth-child(2) > div:nth-child(1) > div > div.progress-box.progress-box-schemaform > div > form > div.vads-u-margin-y--2.rjsf-object-field > div > fieldset > div:nth-child(3) > div > div:nth-child(2) > fieldset.usa-input-error > div.schemaform-widget-wrapper {
+    margin-top: -1.7em;
+  }
 }
 
 article#pre-need[data-location="sponsor-deceased"],
@@ -108,6 +136,12 @@ article#pre-need[data-location="review-and-submit"] {
     }
     margin-bottom: 1em;
     padding-bottom: 2em;
+  }
+  fieldset > div.schemaform-widget-wrapper > fieldset > div {
+    margin-top: -0.9em;
+  }
+  fieldset.usa-input-error  > div.schemaform-widget-wrapper > fieldset > div {
+    margin-top: 0.9em;
   }
 }
 
